--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div id="options" class="options"></div>
         </section>
 
-        <section id="feedback" class="hidden"></section>
+        <section id="feedback" class="hidden feedback-style"></section>
 
         <section id="end-quiz" class="hidden">
             <h2>Quiz Completed! Great Job!</h2>
