--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </div>
 
     <div class="time">Time: <span id="timer">0</span></div>
+    <div class="score">Score: <span id="score">0</span></div>
 
     <section class="body-container">
         <section id="begin-screen" class="start">
